--- a/sqlx-core/Cargo.toml
+++ b/sqlx-core/Cargo.toml
@@ -44,7 +44,7 @@ mysql = [
     "rand",
     "rsa",
 ]
-sqlite = ["libsqlite3-sys", "futures-executor", "flume"]
+sqlite = ["libsqlite3-sys", "futures-executor", "flume", "bottomless"]
 mssql = ["uuid", "encoding_rs", "regex"]
 any = []
 
@@ -112,6 +112,10 @@ bigdecimal_ = { version = "0.3.0", optional = true, package = "bigdecimal" }
 rust_decimal = { version = "1.19.0", optional = true }
 bit-vec = { version = "0.6.3", optional = true }
 bitflags = { version = "1.3.2", default-features = false }
+bottomless = { git = "https://github.com/libsql/bottomless", branch = "master", default-features = false, features = [
+    "sync",
+    "libsql_linked_statically"
+], optional = true }
 bytes = "1.1.0"
 byteorder = { version = "1.4.3", default-features = false, features = ["std"] }
 chrono = { version = "0.4.19", default-features = false, features = ["clock"], optional = true }
