Add fs_and_spawn feature flag for wasm32-unknown-unknown
This feature is on by default. Users can opt-out by not using
default features, which makes it possible to compile sqlx
to wasm32-unknown-unknown target.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,9 +41,10 @@ features = ["all", "runtime-tokio-native-tls"]
 rustdoc-args = ["--cfg", "docsrs"]
 
 [features]
-default = ["macros", "migrate"]
+default = ["macros", "migrate", "fs_and_spawn"]
 macros = ["sqlx-macros"]
 migrate = ["sqlx-macros/migrate", "sqlx-core/migrate"]
+fs_and_spawn = ["sqlx-macros/fs_and_spawn", "sqlx-core/fs_and_spawn"]
 
 # [deprecated] TLS is not possible to disable due to it being conditional on multiple features
 #              Hopefully Cargo can handle this in the future
