core,macros: allow buildtime bindings for SQLite
Before this patch, libsqlite3-sys crate was always used with its "bundled"
feature, which makes it impossible to build bindings and link with a custom
version of the libsqlite3 library. This patch adds a "sqlite-nonbundled"
feature which does not enforce `libsqlite3-sys/bundled`, allowing the users to
provide their own paths for binding and linking, as well as other custom
features of libsqlite3-sys, like buildtime_bindgen (also added to sqlx-sqlite's
Cargo.toml).

The snippet below works as expected after the patch:
```
SQLITE3_LIB_DIR=~/repo/libsql/.libs \
    SQLITE3_INCLUDE_DIR=~/repo/libsql/ \
    cargo build -F sqlite-nonbundled,libsqlite3-sys/buildtime_bindgen
```

For backward compatibility purposes, the existing sqlite feature still defaults to using bundled SQLite.

--- a/sqlx-macros/Cargo.toml
+++ b/sqlx-macros/Cargo.toml
@@ -25,6 +25,7 @@ migrate = ["sqlx-macros-core/migrate"]
 # database
 mysql = ["sqlx-macros-core/mysql"]
 postgres = ["sqlx-macros-core/postgres"]
+sqlite-nonbundled = ["sqlx-macros-core/sqlite-nonbundled"]
 sqlite = ["sqlx-macros-core/sqlite"]
 
 # type
