--- a/sqlx-sqlite/Cargo.toml
+++ b/sqlx-sqlite/Cargo.toml
@@ -15,6 +15,7 @@ any = ["sqlx-core/any"]
 json = ["sqlx-core/json", "serde"]
 offline = ["sqlx-core/offline", "serde"]
 migrate = ["sqlx-core/migrate"]
+bundled = ["libsqlite3-sys/bundled"]
 
 chrono = ["dep:chrono", "bitflags"]
 regexp = ["dep:regex"]
@@ -52,7 +53,6 @@ default-features = false
 features = [
     "pkg-config",
     "vcpkg",
-    "bundled",
     "unlock_notify"
 ]
 
