--- a/sqlx-macros/Cargo.toml
+++ b/sqlx-macros/Cargo.toml
@@ -57,7 +57,7 @@ mysql = ["sqlx-core/mysql"]
 postgres = ["sqlx-core/postgres"]
 sqlite = ["sqlx-core/sqlite"]
 mssql = ["sqlx-core/mssql"]
-libsql-http = ["sqlx-core/libsql-http"]
+libsql-client = ["sqlx-core/libsql-client"]
 
 # type
 bigdecimal = ["sqlx-core/bigdecimal"]
