--- a/sqlx-core/Cargo.toml
+++ b/sqlx-core/Cargo.toml
@@ -26,7 +26,7 @@ postgres = ["md-5", "sha2", "base64", "sha1", "rand", "hmac", "futures-channel/s
 mysql = ["sha1", "sha2", "generic-array", "num-bigint", "digest", "rand", "rsa"]
 sqlite = ["libsqlite3-sys", "futures-executor", "flume"]
 mssql = ["uuid", "encoding_rs", "regex"]
-libsql-http = ["libsql-client", "worker"]
+libsql-client = ["dep:libsql-client", "worker"]
 any = []
 
 # types
@@ -127,7 +127,7 @@ hkdf = { version = "0.12.0", optional = true }
 event-listener = "2.5.2"
 
 dotenvy = "0.15"
-libsql-client = { version = "0.2.0", optional = true }
+libsql-client = { version = "0.24.3", optional = true }
 worker = { version = "0.0.12", optional = true }
 
 [dev-dependencies]
