--- a/sqlx-macros/Cargo.toml
+++ b/sqlx-macros/Cargo.toml
@@ -26,6 +26,7 @@ migrate = ["sqlx-macros-core/migrate"]
 mysql = ["sqlx-macros-core/mysql"]
 postgres = ["sqlx-macros-core/postgres"]
 sqlite = ["sqlx-macros-core/sqlite"]
+libsql-client = ["sqlx-macros-core/libsql-client"]
 
 # type
 bigdecimal = ["sqlx-macros-core/bigdecimal"]
