--- a/Cargo.toml
+++ b/Cargo.toml
@@ -89,7 +89,7 @@ any = ["sqlx-core/any", "sqlx-mysql?/any", "sqlx-postgres?/any", "sqlx-sqlite?/a
 postgres = ["sqlx-postgres", "sqlx-macros?/postgres"]
 mysql = ["sqlx-mysql", "sqlx-macros?/mysql"]
 sqlite = ["sqlx-sqlite", "sqlx-macros?/sqlite"]
-libsql-client = ["sqlx-libsql-client", "sqlx-macros?/libsql-client", "dep:libsql-client"]
+libsql-client = ["sqlx-libsql-client", "sqlx-macros?/libsql-client"]
 
 # types
 json = ["sqlx-macros?/json", "sqlx-mysql?/json", "sqlx-postgres?/json", "sqlx-sqlite?/json"]
@@ -151,7 +151,6 @@ sqlx-mysql = { workspace = true, optional = true }
 sqlx-postgres = { workspace = true, optional = true }
 sqlx-sqlite = { workspace = true, optional = true }
 sqlx-libsql-client = { workspace = true, optional = true }
-libsql-client = { version = "0.24.3", default-features = false, features = ["reqwest_backend"], optional = true }
 
 [dev-dependencies]
 anyhow = "1.0.52"
