--- a/sqlx-libsql-client/Cargo.toml
+++ b/sqlx-libsql-client/Cargo.toml
@@ -48,6 +48,8 @@ tracing = { version = "0.1.37", features = ["log"] }
 serde = { version = "1.0.145", features = ["derive"], optional = true }
 regex = { version = "1.5.5", optional = true }
 
+libsql-client = { version = "0.24.3", default-features = false, features = ["reqwest_backend"] }
+
 [dependencies.libsqlite3-sys]
 version = "0.25.1"
 default-features = false
