next it: added the libsql-client example

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,8 @@ members = [
 #    "examples/postgres/todos",
 #    "examples/postgres/mockable-todos",
 #    "examples/postgres/transaction",
-    "examples/sqlite/todos",
+#    "examples/sqlite/todos",
+    "examples/libsql-client/todos",
 ]
 
 [workspace.package]
